apps/base/n8n/forward-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwarded-headers
  namespace: n8n
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
