apps/base/n8n/http-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: n8n
spec:
  redirectScheme:
    scheme: https
    permanent: true
