apps/base/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
  labels:
    service: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      service: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: n8n
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: n8n
          image: n8nio/n8n:latest
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 5678
              protocol: TCP
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-data
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-data
