apps/base/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
  labels:
    service: n8n
spec:
  ports:
    - name: http
      port: 5678
      targetPort: 5678
  selector:
    service: n8n
