apps/base/n8n/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.ehomelab.local`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
